# jisai_auto_sorting

./: .gitignore  bridge.py
launch/: auto_sorting.py
src/body/: CMakeLists.txt  package.xml
src/body/include/SerialUltra/: CMakeLists.txt  Communicate.h  SerialUltra.h
src/body/include/SerialUltra/include/MessageProcessor/: InputMessageProcessor.h  OutputMessageProcessor.h
src/body/include/body/: Communication.cpp  Communication.h
src/body/launch/: auto_sorting.py
src/body/src/: arm_node.cpp  body_node.cpp  chassis_node.cpp  find_device_node.cpp  qr_code_node.cpp  test_usb.cpp
src/brain/: CMakeLists.txt  package.xml
src/brain/src/: control_node.cpp
src/control_node/: CMakeLists.txt  package.xml
src/control_node/src/: control_node.cpp
src/detect/: package.xml  setup.py
src/detect/detect/: detect_node.py
src/eye/: CMakeLists.txt  cam.info  package.xml  stereo.info
src/eye/src/: camera_node.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ArmPose.msg  ItemInfo.msg  Pose.msg  SerialData.msg
src/interfaces/srv/: DeviceInfo.srv
src/realsense-ros/realsense2_camera/launch/: rs_t265_launch.py
